# advent_of_code

2023/: pyproject.toml
2023/day22/: build_scatter.py  parse.py  parse_test.py  test.txt
2023/utils/: import.py
