[tool.poetry]
name = "2023"
version = "0.1.0"
description = ""
authors = ["Craig Boman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
lxml = "^4.9.4"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pytest = "^7.4.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
